--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
+  max-height: 100vh;
+  max-width: 100vw;
   display: flex;
   justify-content: start;
   flex-direction: column;
@@ -37,12 +37,14 @@ body {
   background: rgb(183 183 183);
   color: red;
 }
+
 .weather-box {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
+
 .location,
 .temperature {
   height: 8rem;
@@ -76,17 +78,6 @@ body {
   font-size: 3rem;
 }
 
-.overlay {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  height: 200px;
-  width: 200px;
-  background: gray;
-}
-
 .icon {
   pointer-events: none;
   display: none;
@@ -96,6 +87,10 @@ body {
 }
 
 /* Submit Form */
+.search__wrapper {
+  width: 15rem;
+}
+
 button {
   cursor: pointer;
   font-family: "Galapagos";
@@ -104,13 +99,12 @@ button {
 }
 
 form {
-  width: 15rem;
-  display: flex;
   margin-bottom: 2rem;
 }
 
 button,
 input {
+  flex: 1;
   border: none;
   background: none;
   outline: none;
@@ -118,19 +112,25 @@ input {
   margin-top: 4rem;
   padding: 2px;
 }
+
 input {
-  flex: 1;
   border: 1px solid red;
   background-color: #c5c5ff !important;
+  padding: 0.6rem 0.2rem;
 }
 
-ul {
-  list-style: none;
-}
 .msg {
   font-family: "Whyte";
   margin-top: 4rem;
+  display: inline-block;
+  width: 12rem;
 }
-.search-bar {
-  width: 15rem;
+
+@media (min-width: 600px) {
+  form {
+    width: 20rem;
+  }
+  input {
+    width: 15rem;
+  }
 }
